added backgrount gradient color

--- a/index.html
+++ b/index.html
@@ -42,14 +42,28 @@
   <!-- main page -->
 
   <article>
-   <!--<a href="https://ibb.co/yB5W544"><img id="picture" src="https://i.ibb.co/bRLzLbb/Screenshot-2024-08-01-at-20-59-52.png" alt="Screenshot-2024-08-01-at-20-59-52" border="0"></a> -->
    <img src="index.png" alt="index picture">
     <heading>
       <h1 id="heading">Israel's banking system for new immigrants</h1>
     </heading>
 
     <div id="article">Here you will find information about specific features of the banking system in Israel. You will learn how to open an account, what kinds of bank cards there are, why you need a cheque book and other important information for olim hadashim. </div>
-  </article>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+</article>
+
+  <!-- links -->
+   <div id="links">
+    <br>
+    <br>
+    hhh
+    <br>
+    hdfhle
+   </div>
+
 </body>
 
 </html>
