added resources folder

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <article>
    <!--<a href="https://ibb.co/yB5W544"><img id="picture" src="https://i.ibb.co/bRLzLbb/Screenshot-2024-08-01-at-20-59-52.png" alt="Screenshot-2024-08-01-at-20-59-52" border="0"></a> -->
-   <img src="index.png" alt="index picture">
+   <img src="resources/index.png" alt="index picture">
     <heading>
       <h1 id="heading">Israel's banking system for new immigrants</h1>
     </heading>
