--- a/index.html
+++ b/index.html
@@ -57,11 +57,28 @@
 
   <!-- links -->
    <div id="links">
-    <br>
-    <br>
-    hhh
-    <br>
-    hdfhle
+<heading>
+    <h3 id="heading2">
+    Helpful information </h3>
+    </heading>
+    <div class="container">
+        <div class="row">
+            <!--link 1 -->
+            <div class="col s6 m3">
+                <div class="card" id="card">
+                  <div class="card-image">
+                    <img id="card-image" src="resources/overview.png">
+                  </div>
+                  <div class="card-content">
+                    <p class="cardcard">
+                        Overview of banking system in Israel    </p>              
+                        <a id="button_open" href="overview.html" class="btn ce"><span id="open">Open</span></a>
+                    </div>
+                </div>
+              </div>
+            </div>
+            </div>
+
    </div>
 
 </body>
