--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index Page</title>
+  <title>Israel's banking system</title>
   <link rel="stylesheet" href="styles.css" type="text/css">
-  <link rel="preconnect" <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dosis:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">href="https://fonts.googleapis.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dosis:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Dosis:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Dosis:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- Compiled and minified JavaScript -->
@@ -25,31 +29,32 @@
 <body>
 
   <!--navigation -->
-  <nav>
+  <nav>    
     <div class="nav-wrapper white">
       <a href="#" class="brand-logo"><span id="bank">Banks</span><span id="info">Info</span></a>
-
       <ul class="right" id="navlist">
-        <li class="navlinks"><a href="#index.html" class="links">Home</a></li>
-        <li class="navlinks" id="startreading"><a href="#overview.html" class="links">Start reading</a></li>
-        <li><a id="button" href="#" class="waves-effect waves-light btn"><span id="contactus">Contact us</span></a></li>
-
+        <li class="navlinks" id="startreading"><a href="overview.html" class="links">Start reading</a></li>
+        <li><a id="button" href="form.html" class="waves-effect waves-light btn"><span id="contactus">Contact us</span></a></li>
       </ul>
-
     </div>
   </nav>
 
+
   <!-- main page -->
+  <main>
+    <article>
+      <img id="banking" src="resources/index.png" alt="bank">
+        <h1 id="heading">Israel's banking system for new immigrants</h1>
+      <div class="content">Here you will find information about specific features of the banking system in Israel. You will
+        learn how to open an account, what kinds of bank cards there are, why you need a cheque book and other important
+        information for olim hadashim. </div>
+    </article>
 
-  <article>
-   <!--<a href="https://ibb.co/yB5W544"><img id="picture" src="https://i.ibb.co/bRLzLbb/Screenshot-2024-08-01-at-20-59-52.png" alt="Screenshot-2024-08-01-at-20-59-52" border="0"></a> -->
-   <img src="resources/index.png" alt="index picture">
-    <heading>
-      <h1 id="heading">Israel's banking system for new immigrants</h1>
-    </heading>
-
-    <div id="article">Here you will find information about specific features of the banking system in Israel. You will learn how to open an account, what kinds of bank cards there are, why you need a cheque book and other important information for olim hadashim. </div>
-  </article>
+  </main>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
