all cards created

--- a/index.html
+++ b/index.html
@@ -1,86 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index Page</title>
+    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <link
+      rel="preconnect"
+      <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dosis:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Dosis:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-2.1.1.min.js"
+    ></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index Page</title>
-  <link rel="stylesheet" href="styles.css" type="text/css">
-  <link rel="preconnect" <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dosis:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Dosis:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</head>
+  <body>
+    <!--navigation -->
+    <nav>
+      <div class="nav-wrapper white">
+        <a href="#" class="brand-logo"
+          ><span id="bank">Banks</span><span id="info">Info</span></a
+        >
 
-<body>
+        <ul class="right" id="navlist">
+          <li class="navlinks"><a href="#index.html" class="links">Home</a></li>
+          <li class="navlinks" id="startreading">
+            <a href="#overview.html" class="links">Start reading</a>
+          </li>
+          <li>
+            <a id="button" href="#" class="waves-effect waves-light btn"
+              ><span id="contactus">Contact us</span></a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-  <!--navigation -->
-  <nav>
-    <div class="nav-wrapper white">
-      <a href="#" class="brand-logo"><span id="bank">Banks</span><span id="info">Info</span></a>
+    <!-- main page -->
 
-      <ul class="right" id="navlist">
-        <li class="navlinks"><a href="#index.html" class="links">Home</a></li>
-        <li class="navlinks" id="startreading"><a href="#overview.html" class="links">Start reading</a></li>
-        <li><a id="button" href="#" class="waves-effect waves-light btn"><span id="contactus">Contact us</span></a></li>
+    <article>
+      <img src="index.png" alt="index picture" />
+      <heading>
+        <h1 id="heading">Israel's banking system for new immigrants</h1>
+      </heading>
 
-      </ul>
+      <div id="article">
+        Here you will find information about specific features of the banking
+        system in Israel. You will learn how to open an account, what kinds of
+        bank cards there are, why you need a cheque book and other important
+        information for olim hadashim.
+      </div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+    </article>
 
-    </div>
-  </nav>
-
-  <!-- main page -->
-
-  <article>
-   <img src="index.png" alt="index picture">
-    <heading>
-      <h1 id="heading">Israel's banking system for new immigrants</h1>
-    </heading>
-
-    <div id="article">Here you will find information about specific features of the banking system in Israel. You will learn how to open an account, what kinds of bank cards there are, why you need a cheque book and other important information for olim hadashim. </div>
- <br>
- <br>
- <br>
- <br>
- <br>
-</article>
-
-  <!-- links -->
-   <div id="links">
-<heading>
-    <h3 id="heading2">
-    Helpful information </h3>
-    </heading>
-    <div class="container">
+    <!-- links to other pages-->
+    <div id="links">
+      <heading>
+        <h3 id="heading2">Helpful information</h3>
+      </heading>
+      <div class="container">
         <div class="row">
-            <!--link 1 -->
-            <div class="col s6 m3">
-                <div class="card" id="card">
-                  <div class="card-image">
-                    <img id="card-image" src="resources/overview.png">
-                  </div>
-                  <div class="card-content">
-                    <p class="cardcard">
-                        Overview of banking system in Israel    </p>              
-                        <a id="button_open" href="overview.html" class="btn ce"><span id="open">Open</span></a>
-                    </div>
-                </div>
+          <!--overview link-->
+          <div class="col s7 m4">
+            <div class="card">
+              <div class="card-image">
+                <img class="imageincards" src="resources/overview.png" />
+              </div>
+              <div class="card-content">
+                <p class="card_heading_style">
+                 Overview
+                </p>
+                <p class="card_content_style">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+               <a class="button_open" href="overview.html" 
+                  ><span class="button_open_content">Open</span></a>
               </div>
             </div>
+          </div>
+
+          <!--opening account link-->
+          <div class="col s7 m4">
+            <div class="card">
+              <div class="card-image">
+                <img class="imageincards" src="resources/overview.png" />
+              </div>
+              <div class="card-content">
+                <p class="card_heading_style">Opening a bank account</p>
+                <p class="card_content_style">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="button_open" href="opening_account.html"
+                  ><span class="button_open_content">Open</span></a
+                >
+              </div>
             </div>
+          </div>
 
-   </div>
+          <!--cards link-->
+          <div class="col s7 m4">
+            <div class="card">
+              <div class="card-image">
+                <img class="imageincards" src="resources/overview.png" />
+              </div>
+              <div class="card-content">
+                <p class="card_heading_style">Bank and credit cards</p>
+                <p class="card_content_style">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="button_open" href="cards.html"
+                  ><span class="button_open_content">Open</span></a
+                >
+              </div>
+            </div>
+          </div>
 
-</body>
+          <!--checks link-->
+          <div class="col s7 m4">
+            <div class="card">
+              <div class="card-image">
+                <img class="imageincards" src="resources/overview.png" />
+              </div>
+              <div class="card-content">
+                <p class="card_heading_style">Bank checks</p>
+                <p class="card_content_style">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="button_open" href="cheques.html" 
+                  ><span class="button_open_content">Open</span></a
+                >
+              </div>
+            </div>
+          </div>
 
+          <!--installments link-->
+          <div class="col s7 m4">
+            <div class="card">
+              <div class="card-image">
+                <img class="imageincards" src="resources/overview.png" />
+              </div>
+              <div class="card-content">
+                <p class="card_heading_style">Paying in installments</p>
+                <p class="card_content_style">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="button_open" href="installments.html"
+                  ><span class="button_open_content">Open</span></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!--comissions link-->
+          <div class="col s7 m4">
+            <div class="card">
+              <div class="card-image">
+                <img class="imageincards" src="resources/overview.png" />
+              </div>
+              <div class="card-content">
+                <p class="card_heading_style">Hidden commissions</p>
+                <p class="card_content_style">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="button_open" href="comissions.html"
+                  ><span class="button_open_content">Open</span></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!--deposits link-->
+          <div class="col s7 m4">
+            <div class="card">
+              <div class="card-image">
+                <img class="imageincards" src="resources/overview.png" />
+              </div>
+              <div class="card-content">
+                <p class="card_heading_style">Deposits</p>
+                <p class="card_content_style">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="button_open" href="deposits.html"
+                  ><span class="button_open_content">Open</span></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!--mortgage link-->
+          <div class="col s7 m4">
+            <div class="card">
+              <div class="card-image">
+                <img class="imageincards" src="resources/overview.png" />
+              </div>
+              <div class="card-content">
+                <p class="card_heading_style">Mortgage</p>
+                <p class="card_content_style">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="button_open" href="mortgage.html" 
+                  ><span class="button_open_content">Open</span></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
