--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a id="button" href="#" class="waves-effect waves-light btn"
               ><span id="contactus">Contact us</span></a
             >
-          </li>
+          </li>"
         </ul>
       </div>
     </nav>
@@ -70,7 +70,7 @@
     <!-- main page -->
 
     <article>
-      <img src="index.png" alt="index picture" />
+      <img id="banking"src="resources/index.png" alt="index picture"/>
       <heading>
         <h1 id="heading">Israel's banking system for new immigrants</h1>
       </heading>
@@ -81,11 +81,6 @@
         bank cards there are, why you need a cheque book and other important
         information for olim hadashim.
       </div>
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
     </article>
 
     <!-- links to other pages-->
@@ -97,16 +92,16 @@
         <div class="row">
           <!--overview link-->
           <div class="col s7 m4">
-            <div class="card">
+            <div class="card N/A transparent">
               <div class="card-image">
-                <img class="imageincards" src="resources/overview.png" />
+                <img class="imageincards" src="resources/logo_overview.png"  style="width:75px;height:95px;" />
               </div>
               <div class="card-content">
                 <p class="card_heading_style">
                  Overview
                 </p>
                 <p class="card_content_style">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Learn more about banking system in Israel and find out what the biggest banks are
                 </p>
                <a class="button_open" href="overview.html" 
                   ><span class="button_open_content">Open</span></a>
@@ -116,14 +111,14 @@
 
           <!--opening account link-->
           <div class="col s7 m4">
-            <div class="card">
+            <div class="card N/A transparent">
               <div class="card-image">
-                <img class="imageincards" src="resources/overview.png" />
+                <img class="imageincards" src="resources/logo_opening_accpount.png" style="width:75px;height:95px;" />
               </div>
               <div class="card-content">
                 <p class="card_heading_style">Opening a bank account</p>
                 <p class="card_content_style">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Learn how to open and account and which which documents you shouldn't forget
                 </p>
                 <a class="button_open" href="opening_account.html"
                   ><span class="button_open_content">Open</span></a
@@ -134,14 +129,14 @@
 
           <!--cards link-->
           <div class="col s7 m4">
-            <div class="card">
+            <div class="card N/A transparent">
               <div class="card-image">
-                <img class="imageincards" src="resources/overview.png" />
+                <img class="imageincards" src="resources/logo_cards.png" style="width:75px;height:95px;" />
               </div>
               <div class="card-content">
                 <p class="card_heading_style">Bank and credit cards</p>
                 <p class="card_content_style">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Learn about the usage of bank accounts in Israel and the difference between debit and credit cards 
                 </p>
                 <a class="button_open" href="cards.html"
                   ><span class="button_open_content">Open</span></a
@@ -152,14 +147,14 @@
 
           <!--checks link-->
           <div class="col s7 m4">
-            <div class="card">
+            <div class="card N/A transparent">
               <div class="card-image">
-                <img class="imageincards" src="resources/overview.png" />
+                <img class="imageincards" src="resources/logo_cheques.png" style="width:75px;height:95px;" />
               </div>
               <div class="card-content">
                 <p class="card_heading_style">Bank checks</p>
                 <p class="card_content_style">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Learn what you need a checkbook for, how to fill in a check and why you shoudn't cancel checks
                 </p>
                 <a class="button_open" href="cheques.html" 
                   ><span class="button_open_content">Open</span></a
@@ -170,14 +165,14 @@
 
           <!--installments link-->
           <div class="col s7 m4">
-            <div class="card">
+            <div class="card N/A transparent">
               <div class="card-image">
-                <img class="imageincards" src="resources/overview.png" />
+                <img class="imageincards" src="resources/logo_installments.png" style="width:75px;height:95px;" />
               </div>
               <div class="card-content">
                 <p class="card_heading_style">Paying in installments</p>
                 <p class="card_content_style">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Learn what paying in installments is, what is the interest and how it influences your credit card limit
                 </p>
                 <a class="button_open" href="installments.html"
                   ><span class="button_open_content">Open</span></a
@@ -188,14 +183,14 @@
 
           <!--comissions link-->
           <div class="col s7 m4">
-            <div class="card">
+            <div class="card N/A transparent">
               <div class="card-image">
-                <img class="imageincards" src="resources/overview.png" />
+                <img class="imageincards" src="resources/logo_comissions.png" style="width:75px;height:95px;" />
               </div>
               <div class="card-content">
                 <p class="card_heading_style">Hidden commissions</p>
                 <p class="card_content_style">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Learn about hidden and unobvious commissions that might apply to you when using an Isreali bank card
                 </p>
                 <a class="button_open" href="comissions.html"
                   ><span class="button_open_content">Open</span></a
@@ -206,14 +201,14 @@
 
           <!--deposits link-->
           <div class="col s7 m4">
-            <div class="card">
+            <div class="card N/A transparent">
               <div class="card-image">
-                <img class="imageincards" src="resources/overview.png" />
+                <img class="imageincards" src="resources/logo_deposits.png" style="width:75px;height:95px;" />
               </div>
               <div class="card-content">
                 <p class="card_heading_style">Deposits</p>
                 <p class="card_content_style">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Learn about different tyoes of deposits, how to find out and interest rate and why it might be challenging
                 </p>
                 <a class="button_open" href="deposits.html"
                   ><span class="button_open_content">Open</span></a
@@ -224,14 +219,14 @@
 
           <!--mortgage link-->
           <div class="col s7 m4">
-            <div class="card">
+            <div class="card N/A transparent">
               <div class="card-image">
-                <img class="imageincards" src="resources/overview.png" />
+                <img class="imageincards" src="resources/logo_mortgage.png" style="width:75px;height:95px;" />
               </div>
               <div class="card-content">
                 <p class="card_heading_style">Mortgage</p>
                 <p class="card_content_style">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Learn about different types of mortgage and interest rate and what your monthly payment depends on
                 </p>
                 <a class="button_open" href="mortgage.html" 
                   ><span class="button_open_content">Open</span></a
