--- a/overview.html
+++ b/overview.html
@@ -41,8 +41,8 @@
     </nav>
     <main>
         <article>
-            <h3 class="article_heading"><img class="head_image" src="resources/Bank.png" width="80" height="80"
-                    alt="bank"> Overview of banking system in Israel</h3>
+            <h3 class="article_heading"><img class="head_image" src="resources/overview.png" width="80" height="80"
+                    > Overview of banking system in Israel</h3>
             <div class="content">There are 2 main levels of the banking system in Israel:
                 <ul>
                     <li>Government's central bank. The central bank of the country is named Bank of Israel. It regulates
@@ -70,6 +70,7 @@
             </div>
         </article>
     </main>
+    <script src="footer.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
