--- a/index.html
+++ b/index.html
@@ -26,31 +26,33 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
-<body>
+<body id="start_page">
 
   <!--navigation -->
-  <nav>    
+  <nav>
     <div class="nav-wrapper white">
       <a href="#" class="brand-logo"><span id="bank">Banks</span><span id="info">Info</span></a>
       <ul class="right" id="navlist">
-        <li class="navlinks" id="startreading"><a href="overview.html" class="links">Start reading</a></li>
-        <li><a id="button" href="form.html" class="waves-effect waves-light btn"><span id="contactus">Contact us</span></a></li>
+
+        <li><a id="button" href="form.html" class="waves-effect waves-light btn"><span id="contactus">Contact
+              us</span></a></li>
       </ul>
     </div>
   </nav>
-
 
   <!-- main page -->
   <main>
     <article>
       <img id="banking" src="resources/index.png" alt="bank">
-        <h1 id="heading">Israel's banking system for new immigrants</h1>
-      <div class="content">Here you will find information about specific features of the banking system in Israel. You will
+      <h1 id="heading">Israel's banking system for new immigrants</h1>
+      <div class="content">Here you will find information about specific features of the banking system in Israel. You
+        will
         learn how to open an account, what kinds of bank cards there are, why you need a cheque book and other important
         information for olim hadashim. </div>
     </article>
-
   </main>
+
+  <script src="footer.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
