--- a/index.html
+++ b/index.html
@@ -50,6 +50,160 @@
         learn how to open an account, what kinds of bank cards there are, why you need a cheque book and other important
         information for olim hadashim. </div>
     </article>
+    
+    <!-- links to other pages-->
+    <div id="cards_with_links">
+      <h3 id="heading2">Helpful information</h3>
+    <div class="container">
+      <div class="row">
+        <!--overview link-->
+        <div class="col s7 m4">
+          <div class="card N/A transparent">
+            <div class="card-image">
+              <img class="imageincards" src="resources/logo_overview.png"  style="width:75px;height:95px;" />
+            </div>
+            <div class="card-content">
+              <p class="card_heading_style">
+               Overview
+              </p>
+              <p class="card_content_style">
+                  Learn more about banking system in Israel and find out what the biggest banks are
+              </p>
+             <a class="button_open" href="overview.html" 
+                ><span class="button_open_content">Open</span></a>
+            </div>
+          </div>
+        </div>
+
+        <!--opening account link-->
+        <div class="col s7 m4">
+          <div class="card N/A transparent">
+            <div class="card-image">
+              <img class="imageincards" src="resources/logo_opening_accpount.png" style="width:75px;height:95px;" />
+            </div>
+            <div class="card-content">
+              <p class="card_heading_style">Opening a bank account</p>
+              <p class="card_content_style">
+                Learn how to open and account and which which documents you shouldn't forget
+              </p>
+              <a class="button_open" href="opening_account.html"
+                ><span class="button_open_content">Open</span></a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!--cards link-->
+        <div class="col s7 m4">
+          <div class="card N/A transparent">
+            <div class="card-image">
+              <img class="imageincards" src="resources/logo_cards.png" style="width:75px;height:95px;" />
+            </div>
+            <div class="card-content">
+              <p class="card_heading_style">Bank and credit cards</p>
+              <p class="card_content_style">
+                  Learn about the usage of bank accounts in Israel and the difference between debit and credit cards 
+              </p>
+              <a class="button_open" href="cards.html"
+                ><span class="button_open_content">Open</span></a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!--checks link-->
+        <div class="col s7 m4">
+          <div class="card N/A transparent">
+            <div class="card-image">
+              <img class="imageincards" src="resources/logo_cheques.png" style="width:75px;height:95px;" />
+            </div>
+            <div class="card-content">
+              <p class="card_heading_style">Bank checks</p>
+              <p class="card_content_style">
+                  Learn what you need a checkbook for, how to fill in a check and why you shoudn't cancel checks
+              </p>
+              <a class="button_open" href="cheques.html" 
+                ><span class="button_open_content">Open</span></a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!--installments link-->
+        <div class="col s7 m4">
+          <div class="card N/A transparent">
+            <div class="card-image">
+              <img class="imageincards" src="resources/logo_installments.png" style="width:75px;height:95px;" />
+            </div>
+            <div class="card-content">
+              <p class="card_heading_style">Paying in installments</p>
+              <p class="card_content_style">
+                  Learn what paying in installments is, what is the interest and how it influences your credit card limit
+              </p>
+              <a class="button_open" href="installments.html"
+                ><span class="button_open_content">Open</span></a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!--comissions link-->
+        <div class="col s7 m4">
+          <div class="card N/A transparent">
+            <div class="card-image">
+              <img class="imageincards" src="resources/logo_comissions.png" style="width:75px;height:95px;" />
+            </div>
+            <div class="card-content">
+              <p class="card_heading_style">Hidden commissions</p>
+              <p class="card_content_style">
+                  Learn about hidden and unobvious commissions that might apply to you when using an Isreali bank card
+              </p>
+              <a class="button_open" href="comissions.html"
+                ><span class="button_open_content">Open</span></a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!--deposits link-->
+        <div class="col s7 m4">
+          <div class="card N/A transparent">
+            <div class="card-image">
+              <img class="imageincards" src="resources/logo_deposits.png" style="width:75px;height:95px;" />
+            </div>
+            <div class="card-content">
+              <p class="card_heading_style">Deposits</p>
+              <p class="card_content_style">
+                  Learn about different tyoes of deposits, how to find out and interest rate and why it might be challenging
+              </p>
+              <a class="button_open" href="deposits.html"
+                ><span class="button_open_content">Open</span></a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!--mortgage link-->
+        <div class="col s7 m4">
+          <div class="card N/A transparent">
+            <div class="card-image">
+              <img class="imageincards" src="resources/logo_mortgage.png" style="width:75px;height:95px;" />
+            </div>
+            <div class="card-content">
+              <p class="card_heading_style">Mortgage</p>
+              <p class="card_content_style">
+                  Learn about different types of mortgage and interest rate and what your monthly payment depends on
+              </p>
+              <a class="button_open" href="mortgage.html" 
+                ><span class="button_open_content">Open</span></a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   </main>
 
   <script src="footer.js"></script>
