fixed typo in forms and a footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="cards_with_links">
       <h3 id="heading2">Helpful information</h3>
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-bottom: 0px;">
         <!--overview link-->
         <div class="col s7 m4">
           <div class="card N/A transparent">
