--- a/form.html
+++ b/form.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <main>
-        <h3 id="heading2">Condact us</h3>
+        <h3 id="heading2">Contact us</h3>
         <div id="form_image">
             <h3 id="heading_feedback">Feedback</h3>
             <img  src="resources/form.png" alt="form_image">
