fixed footer positioning

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </nav>
 
   <!-- main page -->
-  <main>
+  <main >
     <article>
       <img id="banking" src="resources/index.png" alt="bank">
       <h1 id="heading">Israel's banking system for new immigrants</h1>
@@ -205,6 +205,8 @@
   </div>
 
   </main>
+
+  <div id="filler"></div>
 
   <script src="footer.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
